--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>My Website</title>
 </head>
 <body>
+    <h1>Welcome to Our Website</h1><!--Upadated Heading-->
     <h1>Hello, World!</h1>
-    <p>Welcome to our website</p><!-- New Line Added -->
+    <p>Welcome to our website!</p>
 </body>
 </html>
